# command-vault

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.ubuntu  Dockerfile.windows  LICENSE  PROJECT_SCOPE.md  README.md  demo.yml  docker-compose.yml  test-in-docker.sh
.github/workflows/: coverage.yml  release.yml  test-macos.yml  test.yml  version-bump.yml
coverage/: tarpaulin-report.html
demo/: add-command.cast  delete-command.cast  ls-command.cast  search-command.cast  tag-command.cast
scripts/: bump_version.sh  coverage.sh  update_version.sh
shell/: bash-integration.sh  fish-integration.fish  zsh-integration.zsh
src/: db.rs.bak  lib.rs  main.rs  main.rs.bak  version.rs
src/cli/: args.rs  commands.rs  mod.rs
src/db/: mod.rs  models.rs  store.rs
src/exec/: mod.rs
src/shell/: hooks.rs  mod.rs
src/ui/: add.rs  app.rs  mod.rs
src/utils/: mod.rs  params.rs  time.rs
tests/: args_test.rs  cli_test.rs  commands_test.rs  db_test.rs  exec_test.rs  params_test.rs  shell_test.rs  test_utils.rs  time_test.rs  ui_test.rs
