[package]
name = "command-vault"
version = "0.1.2"
edition = "2021"
authors = ["Ozan Kaşikci"]
license = "MIT"
description = "An advanced command history manager with tagging and search capabilities"
repository = "https://github.com/ozan/command-vault"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
atty = "0.2"

[dev-dependencies]
tempfile = "3.8"
