[package]
name = "command-vault"
version = "0.3.0"
edition = "2021"
authors = ["Ozan Kaşikci"]
license = "MIT"
description = "An advanced command history manager with tagging and search capabilities"
repository = "https://github.com/ozan/command-vault"
documentation = "https://docs.rs/command-vault"
readme = "README.md"
keywords = ["cli", "command", "history", "commandline", "utilities" ]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
atty = "0.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
regex = "1.10.2"
colored = "2.0"
shell-escape = "0.1.5"

[[bin]]
name = "command-vault"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8.1"
ctor = "0.2.5"
serial_test = "2.0"
